frontend/tests/cases/positive/interfaces/syntax/synInstanceMultiparam.gr
interface Multiparam a b

data A = A'

instance Multiparam A A
