frontend/tests/cases/negative/interfaces/name-clash/nameClashInterfaceAndTyCon.gr
data A = A'

-- interface name clashes with type constructor
interface A a
